[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/background.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/MenuPrincipal.gd" type="Script" id=3]
[ext_resource path="res://scenes/BackgroundPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 79
font_data = ExtResource( 2 )

[node name="MenuPrincipal" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 640.551, 416.174 )
texture = ExtResource( 1 )

[node name="Titulo" type="Label" parent="."]
margin_left = 423.358
margin_top = 178.381
margin_right = 858.358
margin_bottom = 267.381
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Violeta"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 471.828
margin_top = 481.0
margin_right = 848.828
margin_bottom = 557.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo2" type="Label" parent="Button"]
margin_left = -35.2287
margin_top = -10.459
margin_right = 399.771
margin_bottom = 78.541
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Iniciar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 337.0
margin_top = 605.0
margin_right = 1005.0
margin_bottom = 685.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo3" type="Label" parent="Button2"]
margin_left = 0.734772
margin_top = -8.4032
margin_right = 652.735
margin_bottom = 80.5968
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Como jugar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPlayer" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
